<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_left_right_root_element"
        android:paddingBottom="@dimen/margin_left_right_root_element">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            style="@style/MarginRootElement">
            <EditText
                android:id="@+id/searchBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="60dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/search_box"
                android:hint="@string/enter_keyword"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_foreground"
                android:textColorHint="@color/text_placeholder" />

            <ImageButton
                android:id="@+id/filterButton"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:background="@null"
                android:src="@drawable/baseline_filter_alt_24"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/filter"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/searchBoxEditText"
                app:layout_constraintBottom_toBottomOf="@id/searchBoxEditText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



        <RelativeLayout
            android:id="@+id/selectedFilterItemsHeader"
            android:visibility="gone"
            tools:visibility="visible"
            style="@style/HeadingTitleContainer">

            <TextView
                android:id="@+id/textView1"
                style="@style/HeadingTitle"
                android:layout_alignParentStart="true"
                android:text="@string/selected_filter" />

            <TextView
                style="@style/ExplainHeadingTitle"
                android:layout_below="@+id/textView1"
                android:text="@string/tap_to_delete_out_of_filter" />

            <TextView
                android:id="@+id/delete_all_filter"
                style="@style/Clickable"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/delete_all" />
        </RelativeLayout>

        <com.google.android.flexbox.FlexboxLayout
            style="@style/FlexBoxContainer"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/margin_left_right_root_element"
            android:layout_marginRight="@dimen/margin_left_right_root_element"
            android:id="@+id/selectedFilterItems">

        </com.google.android.flexbox.FlexboxLayout>

        <RelativeLayout style="@style/HeadingTitleContainer">
            <TextView
                style="@style/HeadingTitle"
                android:layout_alignParentStart="true"
                android:text="@string/recent_search" />

            <TextView
                android:id="@+id/delete_all_recent_search"
                style="@style/Clickable"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/delete_all" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/recentSearchItemsContainer"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">
        </LinearLayout>

        <RelativeLayout style="@style/HeadingTitleContainer">
            <TextView
                style="@style/HeadingTitle"
                android:layout_alignParentStart="true"
                android:text="@string/feature_places"/>
        </RelativeLayout>

        <com.google.android.flexbox.FlexboxLayout
            style="@style/FlexBoxContainer"
            android:layout_marginLeft="@dimen/margin_left_right_root_element"
            android:layout_marginRight="@dimen/margin_left_right_root_element"
            android:id="@+id/featurePlaceItems">

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</ScrollView>